<resources>
    <string name="app_name">Madinette</string>
    <string name="oral_contraceptives">* OC - Doustna antykoncepcja (oral contraceptives)</string>
    <string name="octan_chlormadinonu">*CMA - Octan chlormadinonu, EE - Ethynyloestriadiol</string>
    
    <string name="p2_octan_chlormadinonu">@string/octan_chlormadinonu</string>
    <string name="p2_oral_contraceptives">** OC - doustna antykoncpecja</string>
    <string name="p2_footer1">Schramm G, Heckes B. Switching hormonal contraceptives to a chlormadinone acetate-containing oral contraceptive. The Contraceptive Switch Study. Contraception. 2007 Aug;76(2):84-90</string>
    <string name="p2_footer2">Schramm G, Steffens D. Contraceptive efficacy and tolerability of chlormadinone acetate 2mg/ethinylestradiol 0.03mg (Belara®). Results of a post-marketing surveillance study. Clin Drug Invest.</string>

    <string name="p3_octan_chlormadinonu">@string/octan_chlormadinonu</string>
    <string name="p3_footer1">Johannes C. Huber, Marie-Luise S. Heskamp and Georg A.K. Schramm, Effect of an Oral Contraceptive with Chlormadinone Acetate on Depressive Mood Analysis of Data from Four Observational Studies.</string>

    <string name="p4_octan_chlormadinonu_tradzik">EE - Ethynyloestriadiol, DNG – Dienogest</string>
    <string name="p4_footer1_tradzik">Efficacy of a combined oral contraceptive containing 0.030 mg ethinylestradiol/2 mg dienogest for the treatment of papulopustular acne in comparison with placebo and 0.035 mg ethinylestradiol/
2 mg cyproterone acetate.</string>
    <string name="p4_footer2tradzik">Palombo-Kinne E, Schellschmidt I, Schumacher U, Gräser T. Contraception. 2009 Apr;79(4):282-9. </string>

    <string name="p4_octan_chlormadinonu">@string/octan_chlormadinonu</string>
    <string name="p4_footer1">Beier H. M., Beier-Hellwig K. J, Octan chlormadinonu - gestagen podobny do progesteronu o cząstkowym działaniu antyandrogenowym, do stosowania w doustnej antykoncepcji,</string>
    <string name="p4_footer2">Reproduktionsmed Endokrinol 2004; 1 (2):308-17</string>

    <string name="p5_octan_chlormadinonu">@string/octan_chlormadinonu</string>
    <string name="p5_footer1">Zahradnik et al., Efficacy and Safety of New Antiandrogenic Oral Contraceptive Belara, Contraception, 1998;57:103-109.</string>

    <string name="p6_octan_chlormadinonu">@string/octan_chlormadinonu</string>
    <string name="p6_footer1">Guerra-Tapia A., Sancho Pe\'rez B., Ethinylestradiol/Chlormadinone Acetate Dermatological Benefits, Am J Clin Dermatol 2011; 12 Suppl. 1: 3-11, 1175-0561</string>

    <string name="p7_octan_chlormadinonu">@string/octan_chlormadinonu</string>
    <string name="p7_footer1">G. A. K. Schramm, S. Waldmann-Rex, Effects of 2 mg Chlormadinone Acetate/ 0.03 mg Ethinylestradiol in Primary Dysmenorrhoea: The BEDY (Belara® Evaluation on ysmenorrhea)</string>
    <string name="p7_footer2">Study - an Open, Non-Comparative, Non-Interventional Observational Study with 4,842 Women, J Reproduktionsmed Endokrinol 2010;7</string>

    <string name="p8_octan_chlormadinonu">@string/octan_chlormadinonu</string>
    <string name="p8_footer1">Efficacy of a combined oral contraceptive containing 0.030 mg ethinylestradiol/2 mg dienogest for the treatment of papulopustular acne in comparison with placebo and 0.035 mg ethinylestra-</string>
    <string name="p8_footer2">diol/2 mg cyproterone acetate. Palombo-Kinne E, Schellschmidt I, Schumacher U, Gräser T. Contraception. 2009 Apr;79(4):282-9.</string>

    <string name="button_resume">Resume</string>
    <string name="button_next">Dalej</string>
    <string name="button_home">Home</string>
</resources>
