<?xml version="1.0" encoding="utf-8"?>
<pl.pharmaway.sunfarm.sunfarmpresentation.view.FixedScaledLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:fixedWidth="1280dp"
    app:fixedHeight="800dp"
    >



    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:adjustViewBounds="true"
        android:src="@drawable/background"
        />

    <ImageView
        android:id="@+id/img_motyl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="right|top"
        android:layout_marginTop="45dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_motyl"
        />

    <ImageView
        android:id="@+id/page4_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="205dp"
        android:layout_marginLeft="109dp"
        android:adjustViewBounds="true"
        android:src="@drawable/page4_chart"
        />


    <ImageView
        android:id="@+id/page4_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="230dp"
        android:layout_marginLeft="767dp"
        android:adjustViewBounds="true"
        android:src="@drawable/page4_cloud"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"

        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_page04"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p4_octan_chlormadinonu"
            android:textSize="@dimen/footer_text_size"

            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p4_footer1"
            android:textSize="@dimen/footer_text_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p4_footer2"
            android:textSize="@dimen/footer_text_size"
            />
    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/button_resume"

        style="@style/RightBottomButton"
        android:theme="@style/RedVioletButton"
        android:layout_marginBottom="75dp"
        />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/button_home"

        style="@style/LeftBottomButton"
        android:theme="@style/RedVioletButton"
        android:layout_marginBottom="75dp"
        />

</pl.pharmaway.sunfarm.sunfarmpresentation.view.FixedScaledLayout>
