<?xml version="1.0" encoding="utf-8"?>
<pl.pharmaway.sunfarm.sunfarmpresentation.view.FixedScaledLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:fixedWidth="1280dp"
    app:fixedHeight="800dp"
    >



    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:adjustViewBounds="true"
        android:src="@drawable/background"
        />

    <View
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="#F00"/>

    <View
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#F00"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#F00"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="bottom"
        android:background="#F00"/>

    <ImageView
        android:id="@+id/img_motyl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="right|top"
        android:layout_marginTop="45dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_motyl"
        />

    <ImageView
        android:id="@+id/page2_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="160dp"
        android:layout_marginLeft="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/page2_chart"
        />


    <ImageView
        android:id="@+id/page2_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="200dp"
        android:layout_marginLeft="740dp"
        android:adjustViewBounds="true"
        android:src="@drawable/page2_cloud"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"

        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_page02"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p2_octan_chlormadinonu"
            android:textSize="@dimen/footer_text_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p2_oral_contraceptives"
            android:textSize="@dimen/footer_text_size"

            android:layout_marginBottom="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/footer_text_size"
            android:text="@string/p2_footer1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p2_footer2"
            android:textSize="@dimen/footer_text_size"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="Test"

        style="@style/RightBottomButton"
        android:theme="@style/RedVioletButton"
        />

</pl.pharmaway.sunfarm.sunfarmpresentation.view.FixedScaledLayout>
